# rusty_claw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.attractor/: cli-discovery-implementation-summary.md  current_task.md  implementation-summary-91n.md  implementation-summary-dss.md  implementation-summary.md  integration-test-summary.md  investigation.md  test-results-1ke.txt  test-results-sna.txt  test-results.md  transport-implementation-summary.md  transport-test-results.md  verification-checklist.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  docs.yml  release.yml
crates/rusty_claw/: Cargo.toml
crates/rusty_claw/examples/: custom_tool.rs  hooks_guardrails.rs  interactive_client.rs  simple_query.rs  subagent_usage.rs
crates/rusty_claw/src/: client.rs  error.rs  lib.rs  mcp_server.rs  messages.rs  options.rs  query.rs
crates/rusty_claw/src/control/: handlers.rs  messages.rs  mod.rs  pending.rs
crates/rusty_claw/src/hooks/: callback.rs  mod.rs  response.rs  types.rs
crates/rusty_claw/src/permissions/: handler.rs  mod.rs
crates/rusty_claw/src/transport/: discovery.rs  mod.rs  subprocess.rs
crates/rusty_claw/test_support/: mock_cli.rs
crates/rusty_claw/tests/: README.md  integration_test.rs
crates/rusty_claw/tests/fixtures/: error_response.ndjson  simple_query.ndjson  thinking_content.ndjson  tool_use.ndjson
crates/rusty_claw_macros/: Cargo.toml
crates/rusty_claw_macros/src/: lib.rs
crates/rusty_claw_macros/tests/: integration.rs
docs/: HOOKS.md  MCP.md  MESSAGES.md  PERMISSIONS.md  PRD.md  QUICKSTART.md  SESSIONS.md  SPEC.md  SUBAGENTS.md  TEST_PRD.md  TEST_SPEC.md  TROUBLESHOOT_MCP.md
docs/plans/: 2026-02-24-feat-python-sdk-parity-swarm-plan.md
examples/: Cargo.toml  README.md  advanced_config.rs  advanced_tools.rs  agent_environment.rs  custom_tool.rs  external_mcp.rs  file_checkpointing.rs  hook_callbacks.rs  hooks_guardrails.rs  image_tool_results.rs  interactive_client.rs  interrupt_and_status.rs  partial_messages.rs  rate_limit_handling.rs  session_resume.rs  simple_query.rs  subagent_usage.rs  system_prompts.rs  tool_permissions.rs  transport_layer.rs
pipelines/: rusty_claw-sz6.dot
scripts/: create_test_epic.sh
