[package]
name = "rusty_claw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
description = "Rust implementation of the Claude Agent SDK"
keywords = ["anthropic", "claude", "agent", "sdk", "mcp"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

# Re-export macros from the proc-macro crate
rusty_claw_macros = { version = "0.1.0", path = "../rusty_claw_macros" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

# Mock CLI binary for integration tests
[[bin]]
name = "mock_cli"
path = "test_support/mock_cli.rs"
test = false

# Integration test suite
[[test]]
name = "integration"
path = "tests/integration_test.rs"
harness = true

[features]
default = []
